# hello

./: .cmake  CMakeLists.txt  de.po  hello-de.sh  hello-en.sh  hello-pl.sh  helloworld.cpp  helloworld.h  main.cpp  pl.po
go/: .cmake  .make  CMakeLists.txt
